# st-weaviate-connection

./: .gitignore  LICENSE  README.md  app.py  demo_app.py  makefile  pyproject.toml  streamlit_app.py  temp.py
.devcontainer/: devcontainer.json  st-weaviate-connection.code-workspace
data/: add_card_schema.py  all_cards.json  delete_card_schema.py  retrieve_magic_cards.py  weaviate_schema.json
data/examples/: A-Celebrity Fencer.json  Black Lotus.json
notebooks/: 01_demo.ipynb
st_weaviate_connection/: __init__.py  connection.py
tests/: conftest.py  docker-compose.yml  test_connection.py
